# wgpu-mc

./: .envrc  .gitignore  Cargo.toml  README.md  build.gradle  build.rs  check_repo.bat  check_repo.sh  cleanup_repo.bat  cleanup_repo.sh  flake.nix  gradle.properties  gradlew  log.txt  settings.gradle.kts  shell.nix
.github/workflows/: build.yml  rust-check.yml
fabric/: .gitignore  build.gradle.kts
fabric/src/main/java/: dev_birb_wgpu_rust_Wgpu.h
fabric/src/main/java/dev/birb/wgpu/: Options.java  Utils.java  WebGPUNative.java  WgpuMcMod.java
fabric/src/main/java/eapi/: EBindable.java  EBindableCandidate.java  EBuffer.java  ELayout.java  EPipeline.java  ERenderer.java  ETexture.java  EVertexAttributeType.java  SpectrumBindable.java  SpectrumLayout.java  SpectrumRenderer.java  SpectrumTexture.java
fabric/src/main/java/eapi/buffer/: EBindableBuffer.java  EBuffer.java  SpectrumBindableBuffer.java  SpectrumBuffer.java
fabric/src/main/java/eapi/pipeline/: EComputePipeline.java  EPipeline.java  EPipelineSettings.java  EShader.java  SpectrumComputePipeline.java  SpectrumPipeline.java  SpectrumPipelineSettings.java  SpectrumShader.java
fabric/src/main/resources/: fabric.mod.json  wgpu.mixins.json  wgpu.mixins.old.json  wgpu.mixins_old.json  wgpu_mc.accesswidener  wgpu_mc.mixins.backup.json
fabric/src/main/resources/assets/wgpu_mc/shaders/: clear.wgsl  clearcolor.wgsl  debug_lines.wgsl  electrum_gui.wgsl  entity.wgsl  grass.wgsl  gui_col_pos.wgsl  gui_col_pos_uint.wgsl  gui_pos_color_uv_light.wgsl  gui_pos_texture_color.wgsl  gui_uv_pos.wgsl  sky.wgsl  sky_fog.wgsl  sky_scatter.wgsl  stars.wgsl  sun_moon_cycle.wgsl  terrain.wgsl
fabric/wgpu-mc-fabric.xcodeproj/: project.pbxproj
fabric/wgpu-mc-fabric.xcodeproj/project.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
gradle/wrapper/: gradle-wrapper.properties
res/shaders/: gui.fsh  gui.vsh  sky.fsh  sky.vsh  terrain.vsh  transparent.vsh
rust/: .gitignore  Cargo.toml  build.gradle.kts  rust-toolchain.toml
rust/wgpu-mc/: Cargo.toml  build.rs
rust/wgpu-mc-demo/: Cargo.toml  README.md  build.rs  dumped_entities.json
rust/wgpu-mc-demo/res/demo_world/: level.dat_old
rust/wgpu-mc-demo/res/demo_world/region/: r.-1.-1.mca  r.0.-1.mca
rust/wgpu-mc-demo/res/wgpu_mc/: graph.yaml
rust/wgpu-mc-demo/res/wgpu_mc/shaders/: debug_lines.wgsl  entity.wgsl  grass.wgsl  gui.fsh  gui.vsh  quad.wgsl  shadow_terrain.wgsl  sky.vsh  sky.wgsl  terrain.fsh  terrain.wgsl  terrain_vbo.wgsl  transparent.wgsl
rust/wgpu-mc-demo/src/: camera.rs  chunk.rs  entity.rs  main.rs
rust/wgpu-mc-demo/src/chunk/: mod.rs
rust/wgpu-mc-demo/src/entity/: mod.rs
rust/wgpu-mc-jni/: Cargo.toml  architecture.md  blit.wgsl  graph.yaml  gui_textured.wgsl
rust/wgpu-mc-jni/src/: alloc.rs  application.rs  device.rs  entity.rs  gl.rs  glfw.rs  lib.rs  lighting.rs  mc_interface.rs  palette.rs  pia.rs  renderer.rs  settings.rs
rust/wgpu-mc-jni/src/gl/: _pipeline.rs  mod.rs  pipeline.rs
rust/wgpu-mc/shaders/: chunk_assembler.wgsl
rust/wgpu-mc/src/: camera.rs  lib.rs  model.rs  terrain_assembly.wgsl  texture.rs  util.rs
rust/wgpu-mc/src/mc/: block.rs  chunk.rs  direction.rs  entity.rs  gui.rs  mod.rs  resource.rs
rust/wgpu-mc/src/mc/block/: blockstate.rs  mod.rs  model.rs
rust/wgpu-mc/src/mc/chunk/: mod.rs
rust/wgpu-mc/src/mc/datapack/: mod.rs
rust/wgpu-mc/src/render/: atlas.rs  entity.rs  graph.rs  graph_old.rs  mod.rs  pipeline.rs  shader.rs  shaderpack.rs  sky.rs
rust/wgpu-mc/src/render/compute/: mod.rs
rust/wgpu-mc/src/render/entity/: mod.rs  pipeline.rs
rust/wgpu-mc/src/render/pipeline/: builtin.rs  debug_lines.rs  entity.rs  grass.rs  mod.rs  sky.rs  skybox.rs  terrain.rs  transparent.rs
rust/wgpu-mc/src/render/shaderpack/: mod.rs
rust/wgpu-mc/src/render/text/: mod.rs
rust/wgpu-mc/src/render/world/: chunk.rs  mod.rs  sky.rs
rust/wgpu-mc/src/util/: mod.rs
src/: camera.rs  lib.rs  main.rs  model.rs  texture.rs
src/main/java/: dev_birb_wgpu_rust_Wgpu.h
src/main/java/cloud/birb/wgpu/: WebGPUMod.java
src/main/java/cloud/birb/wgpu/mixin/: AbstractTextureMixin.java  FontManagerMixin.java  FramebufferMixin.java  MinecraftClientMixin.java  NativeImageBackedTextureMixin.java  NativeImageMixin.java  RenderSystemMixin.java  TextureManagerMixin.java  TextureUtilMixin.java  WindowProviderMixin.java  WorldRendererMixin.java
src/main/java/cloud/birb/wgpu/rust/: Wgpu.java
src/main/java/dev/birb/wgpu/: WebGPUMod.java
src/main/resources/: fabric.mod.json  wgpu.mixins.json  wgpu.mixins_old.json  wgpu_mc.accesswidener
src/main/resources/assets/wgpu_mc/shaders/: gui.vsh  gui_col_pos.vsh  gui_col_pos_uint.fsh  gui_col_pos_uint.vsh  gui_uv_pos.fsh  gui_uv_pos.vsh  terrain.fsh
src/mc/: block.rs  chunk.rs  mod.rs  resource.rs
src/mc/datapack/: mod.rs
src/shaders/: challenge.frag.spv  challenge.vert  challenge.vert.spv  shader.frag  shader.frag.spv
wgpu-mc/: Cargo.toml  build.rs
wgpu-mc-demo/: Cargo.toml  build.rs
wgpu-mc-demo/res/demo_world/advancements/: 204da39c-3922-485d-b15a-cb7bfe415cdf.json
wgpu-mc-demo/res/demo_world/region/: r.-1.0.mca  r.0.0.mca
wgpu-mc-demo/res/demo_world/stats/: 204da39c-3922-485d-b15a-cb7bfe415cdf.json
wgpu-mc-demo/res/wgpu_mc/shaders/: instanced_entity.fsh  instanced_entity.vsh  terrain.vsh  transparent.fsh
wgpu-mc-demo/src/: main.rs
wgpu-mc-jni/: Cargo.toml
wgpu-mc-jni/src/: cloud_birb_wgpu_rust_Wgpu.h  lib.rs  mc_interface.rs  palette.rs  pipeline.rs
wgpu-mc-jni/src/gl/: mod.rs  pipeline.rs
wgpu-mc/src/: camera.rs  lib.rs  main.rs  model.rs  texture.rs
wgpu-mc/src/mc/: block.rs  chunk.rs  entity.rs  gui.rs  mod.rs  resource.rs
wgpu-mc/src/mc/block/: mod.rs  model.rs
wgpu-mc/src/mc/chunk/: mod.rs
wgpu-mc/src/mc/datapack/: mod.rs
wgpu-mc/src/render/: atlas.rs  mod.rs  pipeline.rs  shader.rs
wgpu-mc/src/render/chunk/: mod.rs
wgpu-mc/src/render/entity/: mod.rs  pipeline.rs
wgpu-mc/src/render/pipeline/: builtin.rs  default.rs  mod.rs
wgpu-mc/src/render/text/: mod.rs
wgpu-mc/src/shaders/: challenge.frag  shader.vert.spv
wgpu-mc/src/util/: mod.rs
(+147 files in other folders)
