[package]
name = "wgpu-mc"
version = "0.1.0"
authors = ["birb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
# shaderc = "0.7" # REMOVED!
cgmath = "0.17"
wgpu = "0.6"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "0.1.12"

serde = "1.0.123"
serde_bytes = "0.11.5"
serde_json = "1.0.62"
mineome = "0.2.0"

guillotiere = "0.6.0"

# NEW!
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

