[package]
name = "wgpu-mc-demo"
version = "0.1.0"
authors = ["Birb <birb.seeb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-root = "0.1.3"
futures = "0.3"
raw-window-handle = "0.3.3"
wgpu = "0.11.0"
wgpu-mc = { path = "../wgpu-mc" }
winit = "0.25.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
reqwest = { version = "0.11.1", features = ["blocking"] }
zip = "0.5.10"
