[package]
name = "wgpu-mc-jni"
version = "0.1.0"
authors = ["Birb <birb.seeb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
wgpu-mc = { path = "../wgpu-mc" }
futures = "0.3"
wgpu = "0.6"
raw-window-handle = "0.3.3"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[lib]
crate-type = ["cdylib"]