[package]
name = "wgpu-mc"
version = "0.1.0"
authors = ["birb"]
edition = "2018"

[dependencies]
image = "0.23"
cgmath = "0.17"
wgpu = { version = "0.11.0", features = ["spirv"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
winit = "0.25.0"
shaderc = "0.7"
serde = "1.0.123"
serde_bytes = "0.11.5"
serde_json = "1.0.62"
guillotiere = "0.6.0"
raw-window-handle = "0.3.3"
rayon = "1.5"
dashmap = "4.0.2"
parking_lot = "0.11.2"