[package]
name = "wgpu-mc"
version = "0.1.0"
authors = ["birb"]
edition = "2021"

[dependencies]
image = "0.23"
cgmath = "0.17"
wgpu = "0.12.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
winit = "0.26.0"
naga = { version = "0.8.3", features = ["glsl-in"] }
serde = "1.0.123"
serde_bytes = "0.11.5"
serde_json = "1.0.62"
guillotiere = "0.6.0"
raw-window-handle = "0.4.2"
rayon = "1.5"
dashmap = "4.0.2"
parking_lot = "0.11.2"
arc-swap = "1.4.0"
bumpalo = "3.8.0"
indexmap = { version = "1.7.0", features = ["std"] }
multi-map = { git = "https://github.com/rust-embedded-community/multi-map.git" }