[package]
name = "wgpu-mc-demo"
version = "0.1.0"
authors = ["Birb <birb.seeb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-root = "0.1.3"
futures = "0.3"
raw-window-handle = "0.4.2"
wgpu-mc = { path = "../wgpu-mc" }
winit = "0.26.0"
cgmath = "0.17"
arc-swap = "1.4.0"
fastanvil = "0.23.0"
fastnbt = "1.3.0"
rayon = "1.5.1"
bytemuck = { version = "1.4", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
reqwest = { version = "0.11.1", features = ["blocking"] }
zip = "0.5.10"
