[package]
name = "wgpu-mc-demo"
version = "0.1.0"
authors = ["Birb <birb.seeb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-root = "0.1.3"
futures = "0.3"
wgpu-mc = { path = "../wgpu-mc", features = ["tracing"] }
winit = "0.29.6"
cgmath = "0.18.0"
glam = "0.25"
arc-swap = "1.4.0"
fastanvil = "0.30.0"
fastnbt = "2.3.2"
rayon = "1.5.1"
bytemuck = { version = "1.13", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
serde_yaml = "0.9.13"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#wgpu-mc-jni = { path = "../wgpu-mc-jni", default-features = false}
renderdoc = "0.12"
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
reqwest = { version = "0.11.1", features = ["blocking"] }
zip = "0.6.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

