[package]
name = "wgpu-mc-jni"
version = "0.1.0"
authors = ["Birb <birb.seeb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-root = "0.1.3"
futures = "0.3"
jni = "0.19.0"
raw-window-handle = "0.5.0"
wgpu-mc = { path = "../wgpu-mc" }
winit = "0.27.4"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
arc-swap = "1.4.0"
bumpalo = "3.8.0"
cgmath = "0.17"
bytemuck = { version = "1.4", features = [ "derive" ] }
dashmap = "5.4.0"
once_cell = "1.9.0"
byteorder = "1.4.3"
crossbeam-channel = "0.5.4"
mc-varint = "0.1.1"
rayon = "1.5.2"
serde_json = "1.0"
serde = { version = "1.0.145", features = ["derive"] }
get-size = { version = "0.1.1" }

[lib]
crate-type = ["cdylib"]
