[package]
name = "wgpu-mc-jni"
version = "0.1.0"
authors = ["Birb <birb.seeb@gmail.com>"]
edition = "2021"

[features]
default = ["tracing"]
libc_alloc = []
tracing = []

[dependencies]
crate-root = "0.1.3"
futures = "0.3"
jni = "0.21.1"
jni_fn = "0.1.0"
raw-window-handle = "0.6"
wgpu-mc = { path = "../wgpu-mc", features = ["tracing"] }
winit = "0.30"
lazy_static = "1.4.0"
strum = "0.26"
strum_macros = "0.26"
parking_lot = "0.12.1"
arc-swap = "1.4.0"
bumpalo = "3.8.0"
glam = "0.29"
bytemuck = { version = "1.13", features = ["derive"] }
dashmap = "6.0"
once_cell = "1.9.0"
byteorder = "1.4.3"
crossbeam-channel = "0.5.4"
mc-varint = "0.1.1"
rayon = "1.5.2"
serde_json = "1.0"
serde = { version = "1.0.145", features = ["derive"] }
get-size = { version = "0.1.1" }
slab = "0.4.7"
log = "0.4.17"
env_logger = "0.11"
serde_yaml = "0.9"
serde-binary = "0.5.0"
profiling = "1.0"
tracy-client = "0.17.1"

[lib]
crate-type = ["cdylib", "rlib"]
