[package]
name = "wgpu-mc"
version = "0.2.0"
authors = ["birb"]
edition = "2021"

[dependencies]
wgpu = { version = "0.14.2", features = ["glsl"] }
image = "0.24"
cgmath = "0.18"
naga = "0.10.0"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
winit = "0.27.4"
serde = "1.0.123"
serde_bytes = "0.11.5"
serde_json = "1.0.62"
serde_yaml = "0.9.13"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
serde_derive = "1.0.145"
guillotiere = "0.6.0"
raw-window-handle = "0.5.0"
rayon = "1.5.2"
dashmap = "5.4.0"
parking_lot = "0.12.1"
arc-swap = "1.4.0"
indexmap = { version = "1.9.2", features = ["std"] }
multi-map = { git = "https://github.com/rust-embedded-community/multi-map.git" }
tracing = "0.1.31"
tracing-timing = "0.6.0"
serde_with = "2.1.0"
web-sys = "0.3.53"
minecraft-assets = { git = "https://github.com/wgpu-mc/minecraft-assets.git" }
get-size = { version = "0.1.1", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"