[package]
name = "wgpu-mc"
version = "0.2.0"
authors = ["birb"]
edition = "2021"

[features]
default = []
tracing = []

[dependencies]
# if you upgrade this, also change WmRenderer::get_backend_description in wgpu-mc/src/lib.rs
wgpu = { version = "22", features = ["glsl"] }
image = "0.25"
glam = "0.29"
bytemuck = { version = "1.13", features = ["derive"] }
anyhow = "1.0"
winit = "0.30.0"
serde = "1.0.123"
serde_bytes = "0.11.5"
serde_json = "1.0.62"
serde_yaml = "0.9.13"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
serde_derive = "1.0"
guillotiere = "0.6.0"
rayon = "1.5.2"
dashmap = "6.0"
parking_lot = "0.12.1"
arc-swap = "1.4.0"
indexmap = { version = "2.0", features = ["std"] }
multi-map = { git = "https://github.com/rust-embedded-community/multi-map.git" }
serde_with = "3.1.0"
web-sys = "0.3.53"
minecraft-assets = { git = "https://github.com/wgpu-mc/minecraft-assets.git", rev = "cf7f49" }
get-size = { version = "0.1.1", features = ["derive"] }
log = "0.4.17"
logging_timer = "1.1.0"
treeculler = "0.4"
range-alloc = "0.1.3"
array-init = "2.1.0"
arrayvec = "0.7.6"
itertools = "0.13"
intrusive-collections = "0.9"
encase = "0.9.0"

[build-dependencies]
cargo-lock = "10.0.1"
